fix(auth): dialog icons wrong colour
This should be considered a temporary fix. As this issue is also present upstream, and will likely be fixed eventually.

--- a/res/css/_common.pcss
+++ b/res/css/_common.pcss
@@ -133,7 +133,7 @@ body {
     /* settings, profile, display name, submit button */
     .mx_UserProfileSettings_profile button:nth-child(1) > svg {
         color: #101317 !important;
-    }    
+    }
 }
 
 pre,
@@ -498,6 +498,9 @@ legend {
     margin-left: -2px;
     margin-right: 4px;
     margin-bottom: 2px;
+
+    /* elecord, temp colour fix */
+    filter: invert(1) brightness(0.85);
 }
 
 .mx_Dialog_title {
