--- a/res/css/views/dialogs/security/_AccessSecretStorageDialog.pcss
+++ b/res/css/views/dialogs/security/_AccessSecretStorageDialog.pcss
@@ -122,6 +122,9 @@ Please see LICENSE files in the repository root for full details.
                         top: 2px; /* alignment */
                         background-image: url("@vector-im/compound-design-tokens/icons/error-solid.svg");
                         background-size: contain;
+
+                        /* elecord, temp colour fix */
+                        filter: invert(1) brightness(0.7);
                     }
 
                     .mx_AccessSecretStorageDialog_reset_link {
